--- a/DDVP/DDVP/Base.lproj/LaunchScreen.storyboard
+++ b/DDVP/DDVP/Base.lproj/LaunchScreen.storyboard
@@ -5,7 +5,6 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,50 +20,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iPoll" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" minimumFontSize="40" translatesAutoresizingMaskIntoConstraints="NO" id="ytD-DE-UwV">
-                                <rect key="frame" x="16" y="73" width="343" height="49"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="49" id="CcT-D1-oqj"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="343" id="WrG-Kb-jv6"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="80"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A Digital Voting Pad" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lDF-H9-eql">
-                                <rect key="frame" x="16" y="136" width="343" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="343" id="d4b-4z-heX"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="hQ0-lo-e3N"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DDVP" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZlI-sF-V9c">
-                                <rect key="frame" x="87" y="242" width="201" height="183"/>
-                                <accessibility key="accessibilityConfiguration">
-                                    <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
-                                </accessibility>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="183" id="80A-9o-Vra"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="201" id="S6O-MQ-2kV"/>
-                                </constraints>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Default" translatesAutoresizingMaskIntoConstraints="NO" id="kAS-LE-G1J">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstItem="ZlI-sF-V9c" firstAttribute="top" secondItem="lDF-H9-eql" secondAttribute="bottom" constant="85" id="COP-Pr-zXx"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="ZlI-sF-V9c" secondAttribute="trailing" constant="71" id="KHp-0G-Kpl"/>
-                            <constraint firstItem="ytD-DE-UwV" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="16" id="O6Z-Yi-BYM"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="ZlI-sF-V9c" secondAttribute="bottom" constant="242" id="RQT-cB-RF7"/>
-                            <constraint firstItem="lDF-H9-eql" firstAttribute="top" secondItem="ytD-DE-UwV" secondAttribute="bottom" constant="14" id="T4H-Is-6Xn"/>
-                            <constraint firstItem="lDF-H9-eql" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="16" id="Wiw-Lb-X2j"/>
-                            <constraint firstItem="ytD-DE-UwV" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="53" id="et7-LL-JMY"/>
-                            <constraint firstAttribute="trailing" secondItem="ytD-DE-UwV" secondAttribute="trailing" constant="16" id="rKh-AJ-edk"/>
-                            <constraint firstAttribute="trailing" secondItem="lDF-H9-eql" secondAttribute="trailing" constant="16" id="wA9-4r-omt"/>
-                            <constraint firstItem="ZlI-sF-V9c" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="71" id="woe-aH-t4G"/>
-                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -73,6 +34,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="DDVP" width="1536" height="1536"/>
+        <image name="Default" width="1536" height="2048"/>
     </resources>
 </document>
